# maude-cloud

./: .gitignore  README.md  pyproject.toml
src/maude/: __init__.py  __main__.py  config.py  engine.py  gateway.py  keys.py  providers.py  setup_wizard.py  tool_registry.py  tui.py
src/maude/collab/: __init__.py  hub.py
src/maude/integrations/: __init__.py  google_workspace.py
src/maude/tools/: __init__.py  agents.py  ai.py  cache.py  collab.py  defs.py  execute.py  file.py  github.py  google.py  groups.py  log.py  memory.py  paths.py  rate_limits.py  schedule.py  shared.py  substack.py  web.py  xai_oauth.py
