[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maude"
version = "2.0.0"
description = "MAUDE — AI assistant with 80+ tools. Cloud models, cross-platform, no GPU required."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Matt Board" },
]
keywords = ["ai", "assistant", "llm", "tools", "claude", "mistral"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "anthropic>=0.39.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "ddgs>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
google = [
    "google-api-python-client>=2.100",
    "google-auth-oauthlib>=1.1",
    "google-auth-httplib2>=0.2",
]
browser = [
    "playwright>=1.40",
]
all = [
    "maude[google,browser]",
    "google-generativeai>=0.8",
]

[project.scripts]
maude = "maude.__main__:main"

[project.urls]
Homepage = "https://github.com/mboard76/maude-cloud"

[tool.hatch.build.targets.wheel]
packages = ["src/maude"]
